@@ -1,6 +1,26 @@
 # BMICalculator
 
+###### Jawad Haider
+
+
+## Instructions
+12.8 (Body Mass Index Calculator App) The formulas for calculating the BMI are
+
+Create a BMI calculator app that allows users to enter their weight and height and whether they are entering these values in English or metric units, then calculates and displays the user’s body mass index.
+
+The app should also display the following information from the Department of Health and Human Services/National Institutes of Health so that users can evaluate their BMIs:
 An activity for java problem sets. Body mass index calculator App using scenebuilder and JavaFX libraries.
+
+## Software Requirements:
+1. Scene Builder installation
+[Official site](https://gluonhq.com/products/scene-builder/) to download Scene Builder.
+
+2. [Official site](https://openjfx.io/) of JavaFX where you can find official documentation as well as download links.
+Step-by-step [instructions] (https://openjfx.io/openjfx-docs/) on how to install and run JavaFX applications.
+
+=> --module-path ${PATH_TO_JAVAFX} --add-modules javafx.controls,javafx.fxml
+
+## ScreenShots
 # I am Healthy :) 
 
 ![](Img/Screenshot%20from%202020-12-18%2011-23-48.png)
